refs #160 fixed wrong width of edit labels in error state

--- a/webroot/css/tourdb.css
+++ b/webroot/css/tourdb.css
@@ -228,7 +228,8 @@ table.tours .tourweek, table.tours .withmountainguide
 .profiles.view table td	{ vertical-align: top; }
 
 /* tourguidereports */
-.tourguidereports .input label { width: 200px; }
-.tourguidereports .expenses .input.text input { width: 100px; }
-#TourGuideReportDescription	{ width: 500px; }
-#TourGuideReportSubstituteTour { width: 500px; }
+.tourguidereports .input label					{ width: 200px; }
+.tourguidereports .input.error label			{ width: 195px; }
+.tourguidereports .expenses .input.text input	{ width: 100px; }
+#TourGuideReportDescription						{ width: 500px; }
+#TourGuideReportSubstituteTour					{ width: 500px; }
